<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:conText=".AboutUs"
    android:background="@drawable/plan_background">

    <ImageView
        android:id="@+id/iv_car_logo"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:scaleType="fitXY"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/car_logo"/>


    <RelativeLayout
        android:layout_below="@+id/iv_car_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="6dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/startpecefullift"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/descriptiontext"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/circular_dot"
                            android:layout_centerHorizontal="true"
                            android:id="@+id/dotb1"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:id="@+id/text1bellowdot1"
                            android:text="@string/ourmission"
                            android:textColor="@color/colorWhite"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/dotb1"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/detailtext"
                            android:text="@string/ourmissiondescrption"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/colorWhite"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_below="@+id/text1bellowdot1"/>


                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/circular_dot"
                            android:layout_centerHorizontal="true"
                            android:id="@+id/dotb2"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:id="@+id/text1bellowdot2"
                            android:text="@string/ouragents"
                            android:textColor="@color/colorWhite"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/dotb2"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/detailtext2"
                            android:text="@string/ouragentdescription"
                            android:textColor="@color/colorWhite"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_below="@+id/text1bellowdot2"/>


                    </RelativeLayout>


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/circular_dot"
                            android:layout_centerHorizontal="true"
                            android:id="@+id/dotb3"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:id="@+id/text1bellowdot3"
                            android:text="@string/ourvision"
                            android:textColor="@color/colorWhite"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/dotb3"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/detailtext3"
                            android:text="@string/ourvisiondescription"
                            android:textColor="@color/colorWhite"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_below="@+id/text1bellowdot3"/>


                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/circular_dot"
                            android:layout_centerHorizontal="true"
                            android:id="@+id/dotb4"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:id="@+id/text1bellowdot4"
                            android:text="@string/value"
                            android:textColor="@color/colorWhite"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/dotb4"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/detailtext4"
                            android:text="@string/valuedescription"
                            android:textColor="@color/colorWhite"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_below="@+id/text1bellowdot4"/>


                    </RelativeLayout>


                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>



</RelativeLayout>
